--- a/FrontEnd/lihkg-clone-practice/src/App.css
+++ b/FrontEnd/lihkg-clone-practice/src/App.css
@@ -7,3 +7,14 @@
   width: 100%;
   height: 5px;
 }
+
+.createtopic {
+  position: fixed;
+  z-index: 1;
+  left: 20;
+  top: 0;
+  width: 50%;
+  height: 100%;
+  overflow: auto;
+  background: white;
+}
