Day 5: Added create topic function

--- a/FrontEnd/lihkg-clone-practice/src/App.css
+++ b/FrontEnd/lihkg-clone-practice/src/App.css
@@ -18,3 +18,12 @@
   overflow: auto;
   background: white;
 }
+
+a {
+  text-decoration: none;
+  color: black !important;
+}
+
+a:hover{
+  text-decoration: none !important;
+}
